tests/snapshots/integration_test__log_data@5f68d73f432c1b2fcd90806a952195e5.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-cred-disp.log:1"
expression: result
info: "type=CRED_DISP msg=audit(1725004605.819:105665): pid=14548 uid=0 auid=4294967295 ses=4294967295 msg='op=PAM:setcred grantors=pam_env,pam_unix acct=\"root\" exe=\"/usr/bin/sudo\" hostname=? addr=? terminal=/dev/pts/0 res=success'"
---
{
  "record_type": "CRED_DISP",
  "timestamp": 1725004605819,
  "id": 105665,
  "fields": {
    "auid": null,
    "msg": {
      "acct": "root",
      "addr": "?",
      "exe": "/usr/bin/sudo",
      "grantors": [
        "pam_env",
        "pam_unix"
      ],
      "hostname": "?",
      "op": "PAM:setcred",
      "res": "success",
      "terminal": "/dev/pts/0"
    },
    "pid": "14548",
    "ses": "4294967295",
    "uid": "root"
  }
}
