tests/snapshots/integration_test__log_data@61d61fd3d10724ee6bd4f80035a13452.snap
---
source: tests/integration_test.rs
expression: record
info: "type=USER_END msg=audit(1481077049.033:423): pid=1298 uid=0 auid=1000 ses=1 subj=system_u:system_r:sshd_t:s0-s0:c0.c1023 msg='op=login id=1000 exe=\"/usr/sbin/sshd\" hostname=? addr=? terminal=/dev/pts/0 res=success'"
---
{
  "record_type": "USER_END",
  "timestamp": 1481077049033,
  "id": 423,
  "fields": {
    "auid": "1000",
    "msg": "op=login id=1000 exe=\"/usr/sbin/sshd\" hostname=? addr=? terminal=/dev/pts/0 res=success",
    "pid": "1298",
    "ses": "1",
    "subj": "system_u:system_r:sshd_t:s0-s0:c0.c1023",
    "uid": "0"
  }
}
