tests/snapshots/integration_test__log_data@634261b01cbabc58afbdf940442d4383.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SOCKADDR msg=audit(1490816924.990:517643): saddr=100000000000000000000000"
---
{
  "record_type": "SOCKADDR",
  "timestamp": 1490816924990,
  "id": 517643,
  "fields": {
    "saddr": "100000000000000000000000"
  }
}
