tests/snapshots/integration_test__log_data@6478baaae022d2d5e3e491803cd73cbf.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test4.log:9"
expression: result
info: "type=EXECVE msg=audit(1655465404.819:27091): argc=216 a0=\"/usr/bin/m4\" a1=\"--nesting-limit=1024\" a2=\"--gnu\" a3=\"--include=/usr/share/autoconf-2.60\" a4=\"--debug=aflq\" a5=\"--fatal-warning\" a6=\"--debugfile=autom4te.cache/traces.0t\" a7=\"--trace=AC_CHECK_LIBM\" a8=\"--trace=AC_CONFIG_MACRO_DIR\" a9=\"--trace=AC_CONFIG_MACRO_DIR_TRACE\" a10=\"--trace=AC_DEFUN\" a11=\"--trace=AC_DEFUN_ONCE\" a12=\"--trace=AC_DEPLIBS_CHECK_METHOD\" a13=\"--trace=AC_DISABLE_FAST_INSTALL\" a14=\"--trace=AC_DISABLE_SHARED\" a15=\"--trace=AC_DISABLE_STATIC\" a16=\"--trace=AC_ENABLE_FAST_INSTALL\" a17=\"--trace=AC_ENABLE_SHARED\" a18=\"--trace=AC_ENABLE_STATIC\" a19=\"--trace=AC_LIBLTDL_CONVENIENCE\" a20=\"--trace=AC_LIBLTDL_INSTALLABLE\" a21=\"--trace=AC_LIBTOOL_COMPILER_OPTION\" a22=\"--trace=AC_LIBTOOL_CONFIG\" a23=\"--trace=AC_LIBTOOL_CXX\" a24=\"--trace=AC_LIBTOOL_DLOPEN\" a25=\"--trace=AC_LIBTOOL_DLOPEN_SELF\" a26=\"--trace=AC_LIBTOOL_F77\" a27=\"--trace=AC_LIBTOOL_FC\" a28=\"--trace=AC_LIBTOOL_GCJ\" a29=\"--trace=AC_LIBTOOL_LANG_CXX_CONFIG\" a30=\"--trace=AC_LIBTOOL_LANG_C_CONFIG\" a31=\"--trace=AC_LIBTOOL_LANG_F77_CONFIG\" a32=\"--trace=AC_LIBTOOL_LANG_GCJ_CONFIG\" a33=\"--trace=AC_LIBTOOL_LANG_RC_CONFIG\" a34=\"--trace=AC_LIBTOOL_LINKER_OPTION\" a35=\"--trace=AC_LIBTOOL_OBJDIR\" a36=\"--trace=AC_LIBTOOL_PICMODE\" a37=\"--trace=AC_LIBTOOL_POSTDEP_PREDEP\" a38=\"--trace=AC_LIBTOOL_PROG_CC_C_O\" a39=\"--trace=AC_LIBTOOL_PROG_COMPILER_NO_RTTI\" a40=\"--trace=AC_LIBTOOL_PROG_COMPILER_PIC\" a41=\"--trace=AC_LIBTOOL_PROG_LD_HARDCODE_LIBPATH\" a42=\"--trace=AC_LIBTOOL_PROG_LD_SHLIBS\" a43=\"--trace=AC_LIBTOOL_RC\" a44=\"--trace=AC_LIBTOOL_SETUP\" a45=\"--trace=AC_LIBTOOL_SYS_DYNAMIC_LINKER\" a46=\"--trace=AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE\" a47=\"--trace=AC_LIBTOOL_SYS_HARD_LINK_LOCKS\" a48=\"--trace=AC_LIBTOOL_SYS_LIB_STRIP\" a49=\"--trace=AC_LIBTOOL_SYS_MAX_CMD_LEN\" a50=\"--trace=AC_LIBTOOL_SYS_OLD_ARCHIVE\" a51=\"--trace=AC_LIBTOOL_WIN32_DLL\" a52=\"--trace=AC_LIB_LTDL\" a53=\"--trace=AC_LTDL_DLLIB\" a54=\"--trace=AC_LTDL_DLSYM_USCORE\" a55=\"--trace=AC_LTDL_ENABLE_INSTALL\" a56=\"--trace=AC_LTDL_OBJDIR\" a57=\"--trace=AC_LTDL_PREOPEN\" a58=\"--trace=AC_LTDL_SHLIBEXT\" a59=\"--trace=AC_LTDL_SHLIBPATH\" a60=\"--trace=AC_LTDL_SYMBOL_USCORE\" a61=\"--trace=AC_LTDL_SYSSEARCHPATH\" a62=\"--trace=AC_LTDL_SYS_DLOPEN_DEPLIBS\" a63=\"--trace=AC_PATH_MAGIC\" a64=\"--trace=AC_PATH_TOOL_PREFIX\" a65=\"--trace=AC_PROG_EGREP\" a66=\"--trace=AC_PROG_LD\" a67=\"--trace=AC_PROG_LD_GNU\" a68=\"--trace=AC_PROG_LD_RELOAD_FLAG\" a69=\"--trace=AC_PROG_LIBTOOL\" a70=\"--trace=AC_PROG_NM\" a71=\"--trace=AC_WITH_LTDL\" a72=\"--trace=AM_AUTOMAKE_VERSION\" a73=\"--trace=AM_AUX_DIR_EXPAND\" a74=\"--trace=AM_CONDITIONAL\" a75=\"--trace=AM_DEP_TRACK\" a76=\"--trace=AM_DISABLE_SHARED\" a77=\"--trace=AM_DISABLE_STATIC\" a78=\"--trace=AM_ENABLE_SHARED\" a79=\"--trace=AM_ENABLE_STATIC\" a80=\"--trace=AM_INIT_AUTOMAKE\" a81=\"--trace=AM_MAKE_INCLUDE\" a82=\"--trace=AM_MISSING_HAS_RUN\" a83=\"--trace=AM_MISSING_PROG\" a84=\"--trace=AM_OUTPUT_DEPENDENCY_COMMANDS\" a85=\"--trace=AM_PROG_CC_C_O\" a86=\"--trace=AM_PROG_INSTALL_SH\" a87=\"--trace=AM_PROG_INSTALL_STRIP\" a88=\"--trace=AM_PROG_LD\" a89=\"--trace=AM_PROG_LIBTOOL\" a90=\"--trace=AM_PROG_NM\" a91=\"--trace=AM_RUN_LOG\" a92=\"--trace=AM_SANITY_CHECK\" a93=\"--trace=AM_SET_CURRENT_AUTOMAKE_VERSION\" a94=\"--trace=AM_SET_DEPDIR\" a95=\"--trace=AM_SET_LEADING_DOT\" a96=\"--trace=AM_SILENT_RULES\" a97=\"--trace=AM_SUBST_NOTMAKE\" a98=\"--trace=AU_DEFUN\" a99=\"--trace=LTDL_CONVENIENCE\" a100=\"--trace=LTDL_INIT\" a101=\"--trace=LTDL_INSTALLABLE\" a102=\"--trace=LTOBSOLETE_VERSION\" a103=\"--trace=LTOPTIONS_VERSION\" a104=\"--trace=LTSUGAR_VERSION\" a105=\"--trace=LTVERSION_VERSION\" a106=\"--trace=LT_AC_PROG_EGREP\" a107=\"--trace=LT_AC_PROG_GCJ\" a108=\"--trace=LT_AC_PROG_RC\" a109=\"--trace=LT_AC_PROG_SED\" a110=\"--trace=LT_CMD_MAX_LEN\" a111=\"--trace=LT_CONFIG_LTDL_DIR\" a112=\"--trace=LT_FUNC_ARGZ\" a113=\"--trace=LT_FUNC_DLSYM_USCORE\" a114=\"--trace=LT_INIT\" a115=\"--trace=LT_LANG\" a116=\"--trace=LT_LIB_DLLOAD\" a117=\"--trace=LT_LIB_M\" a118=\"--trace=LT_OUTPUT\" a119=\"--trace=LT_PATH_LD\" a120=\"--trace=LT_PATH_NM\" a121=\"--trace=LT_PROG_GCJ\" a122=\"--trace=LT_PROG_GO\" a123=\"--trace=LT_PROG_RC\" a124=\"--trace=LT_SUPPORTED_TAG\" a125=\"--trace=LT_SYS_DLOPEN_DEPLIBS\" a126=\"--trace=LT_SYS_DLOPEN_SELF\" a127=\"--trace=LT_SYS_DLSEARCH_PATH\" a128=\"--trace=LT_SYS_MODULE_EXT\" a129=\"--trace=LT_SYS_MODULE_PATH\" a130=\"--trace=LT_SYS_SYMBOL_USCORE\" a131=\"--trace=LT_WITH_LTDL\" a132=\"--trace=_AC_AM_CONFIG_HEADER_HOOK\" a133=\"--trace=_AC_PROG_LIBTOOL\" a134=\"--trace=_AM_AUTOCONF_VERSION\" a135=\"--trace=_AM_CONFIG_MACRO_DIRS\" a136=\"--trace=_AM_DEPENDENCIES\" a137=\"--trace=_AM_IF_OPTION\" a138=\"--trace=_AM_MANGLE_OPTION\" a139=\"--trace=_AM_OUTPUT_DEPENDENCY_COMMANDS\" a140=\"--trace=_AM_PROG_CC_C_O\" a141=\"--trace=_AM_PROG_TAR\" a142=\"--trace=_AM_SET_OPTION\" a143=\"--trace=_AM_SET_OPTIONS\" a144=\"--trace=_AM_SUBST_NOTMAKE\" a145=\"--trace=_LTDL_SETUP\" a146=\"--trace=_LT_AC_CHECK_DLFCN\" a147=\"--trace=_LT_AC_FILE_LTDLL_C\" a148=\"--trace=_LT_AC_LANG_CXX\" a149=\"--trace=_LT_AC_LANG_CXX_CONFIG\" a150=\"--trace=_LT_AC_LANG_C_CONFIG\" a151=\"--trace=_LT_AC_LANG_F77\" a152=\"--trace=_LT_AC_LANG_F77_CONFIG\" a153=\"--trace=_LT_AC_LANG_GCJ\" a154=\"--trace=_LT_AC_LANG_GCJ_CONFIG\" a155=\"--trace=_LT_AC_LANG_RC_CONFIG\" a156=\"--trace=_LT_AC_LOCK\" a157=\"--trace=_LT_AC_PROG_CXXCPP\" a158=\"--trace=_LT_AC_PROG_ECHO_BACKSLASH\" a159=\"--trace=_LT_AC_SHELL_INIT\" a160=\"--trace=_LT_AC_SYS_COMPILER\" a161=\"--trace=_LT_AC_SYS_LIBPATH_AIX\" a162=\"--trace=_LT_AC_TAGCONFIG\" a163=\"--trace=_LT_AC_TAGVAR\" a164=\"--trace=_LT_AC_TRY_DLOPEN_SELF\" a165=\"--trace=_LT_CC_BASENAME\" a166=\"--trace=_LT_COMPILER_BOILERPLATE\" a167=\"--trace=_LT_COMPILER_OPTION\" a168=\"--trace=_LT_DLL_DEF_P\" a169=\"--trace=_LT_LIBOBJ\" a170=\"--trace=_LT_LINKER_BOILERPLATE\" a171=\"--trace=_LT_LINKER_OPTION\" a172=\"--trace=_LT_PATH_TOOL_PREFIX\" a173=\"--trace=_LT_PREPARE_SED_QUOTE_VARS\" a174=\"--trace=_LT_PROG_CXX\" a175=\"--trace=_LT_PROG_ECHO_BACKSLASH\" a176=\"--trace=_LT_PROG_F77\" a177=\"--trace=_LT_PROG_FC\" a178=\"--trace=_LT_PROG_LTMAIN\" a179=\"--trace=_LT_REQUIRED_DARWIN_CHECKS\" a180=\"--trace=_LT_WITH_SYSROOT\" a181=\"--trace=_m4_warn\" a182=\"--trace=include\" a183=\"--trace=m4_include\" a184=\"--trace=m4_pattern_allow\" a185=\"--trace=m4_pattern_forbid\" a186=\"--reload-state=/usr/share/autoconf-2.60/autoconf/autoconf.m4f\" a187=\"--undefine=__m4_version__\" a188=\"-\" a189=\"/usr/share/aclocal-1.16/internal/ac-config-macro-dirs.m4\" a190=\"/usr/share/libtool/aclocal/libtool.m4\" a191=\"/usr/share/libtool/aclocal/ltargz.m4\" a192=\"/usr/share/libtool/aclocal/ltdl.m4\" a193=\"/usr/share/libtool/aclocal/ltoptions.m4\" a194=\"/usr/share/libtool/aclocal/ltsugar.m4\" a195=\"/usr/share/libtool/aclocal/ltversion.m4\" a196=\"/usr/share/libtool/aclocal/lt~obsolete.m4\" a197=\"/usr/share/aclocal-1.16/amversion.m4\" a198=\"/usr/share/aclocal-1.16/auxdir.m4\" a199=\"/usr/share/aclocal-1.16/cond.m4\" a200=\"/usr/share/aclocal-1.16/depend.m4\" a201=\"/usr/share/aclocal-1.16/depout.m4\" a202=\"/usr/share/aclocal-1.16/init.m4\" a203=\"/usr/share/aclocal-1.16/install-sh.m4\" a204=\"/usr/share/aclocal-1.16/lead-dot.m4\" a205=\"/usr/share/aclocal-1.16/make.m4\" a206=\"/usr/share/aclocal-1.16/missing.m4\" a207=\"/usr/share/aclocal-1.16/options.m4\" a208=\"/usr/share/aclocal-1.16/prog-cc-c-o.m4\" a209=\"/usr/share/aclocal-1.16/runlog.m4\" a210=\"/usr/share/aclocal-1.16/sanity.m4\" a211=\"/usr/share/aclocal-1.16/silent.m4\" a212=\"/usr/share/aclocal-1.16/strip.m4\" a213=\"/usr/share/aclocal-1.16/substnot.m4\" a214=\"/usr/share/aclocal-1.16/tar.m4\" a215=\"configure.ac\""
---
{
  "record_type": "EXECVE",
  "timestamp": 1655465404819,
  "id": 27091,
  "fields": {
    "a0": "/usr/bin/m4",
    "a1": "--nesting-limit=1024",
    "a10": "--trace=AC_DEFUN",
    "a100": "--trace=LTDL_INIT",
    "a101": "--trace=LTDL_INSTALLABLE",
    "a102": "--trace=LTOBSOLETE_VERSION",
    "a103": "--trace=LTOPTIONS_VERSION",
    "a104": "--trace=LTSUGAR_VERSION",
    "a105": "--trace=LTVERSION_VERSION",
    "a106": "--trace=LT_AC_PROG_EGREP",
    "a107": "--trace=LT_AC_PROG_GCJ",
    "a108": "--trace=LT_AC_PROG_RC",
    "a109": "--trace=LT_AC_PROG_SED",
    "a11": "--trace=AC_DEFUN_ONCE",
    "a110": "--trace=LT_CMD_MAX_LEN",
    "a111": "--trace=LT_CONFIG_LTDL_DIR",
    "a112": "--trace=LT_FUNC_ARGZ",
    "a113": "--trace=LT_FUNC_DLSYM_USCORE",
    "a114": "--trace=LT_INIT",
    "a115": "--trace=LT_LANG",
    "a116": "--trace=LT_LIB_DLLOAD",
    "a117": "--trace=LT_LIB_M",
    "a118": "--trace=LT_OUTPUT",
    "a119": "--trace=LT_PATH_LD",
    "a12": "--trace=AC_DEPLIBS_CHECK_METHOD",
    "a120": "--trace=LT_PATH_NM",
    "a121": "--trace=LT_PROG_GCJ",
    "a122": "--trace=LT_PROG_GO",
    "a123": "--trace=LT_PROG_RC",
    "a124": "--trace=LT_SUPPORTED_TAG",
    "a125": "--trace=LT_SYS_DLOPEN_DEPLIBS",
    "a126": "--trace=LT_SYS_DLOPEN_SELF",
    "a127": "--trace=LT_SYS_DLSEARCH_PATH",
    "a128": "--trace=LT_SYS_MODULE_EXT",
    "a129": "--trace=LT_SYS_MODULE_PATH",
    "a13": "--trace=AC_DISABLE_FAST_INSTALL",
    "a130": "--trace=LT_SYS_SYMBOL_USCORE",
    "a131": "--trace=LT_WITH_LTDL",
    "a132": "--trace=_AC_AM_CONFIG_HEADER_HOOK",
    "a133": "--trace=_AC_PROG_LIBTOOL",
    "a134": "--trace=_AM_AUTOCONF_VERSION",
    "a135": "--trace=_AM_CONFIG_MACRO_DIRS",
    "a136": "--trace=_AM_DEPENDENCIES",
    "a137": "--trace=_AM_IF_OPTION",
    "a138": "--trace=_AM_MANGLE_OPTION",
    "a139": "--trace=_AM_OUTPUT_DEPENDENCY_COMMANDS",
    "a14": "--trace=AC_DISABLE_SHARED",
    "a140": "--trace=_AM_PROG_CC_C_O",
    "a141": "--trace=_AM_PROG_TAR",
    "a142": "--trace=_AM_SET_OPTION",
    "a143": "--trace=_AM_SET_OPTIONS",
    "a144": "--trace=_AM_SUBST_NOTMAKE",
    "a145": "--trace=_LTDL_SETUP",
    "a146": "--trace=_LT_AC_CHECK_DLFCN",
    "a147": "--trace=_LT_AC_FILE_LTDLL_C",
    "a148": "--trace=_LT_AC_LANG_CXX",
    "a149": "--trace=_LT_AC_LANG_CXX_CONFIG",
    "a15": "--trace=AC_DISABLE_STATIC",
    "a150": "--trace=_LT_AC_LANG_C_CONFIG",
    "a151": "--trace=_LT_AC_LANG_F77",
    "a152": "--trace=_LT_AC_LANG_F77_CONFIG",
    "a153": "--trace=_LT_AC_LANG_GCJ",
    "a154": "--trace=_LT_AC_LANG_GCJ_CONFIG",
    "a155": "--trace=_LT_AC_LANG_RC_CONFIG",
    "a156": "--trace=_LT_AC_LOCK",
    "a157": "--trace=_LT_AC_PROG_CXXCPP",
    "a158": "--trace=_LT_AC_PROG_ECHO_BACKSLASH",
    "a159": "--trace=_LT_AC_SHELL_INIT",
    "a16": "--trace=AC_ENABLE_FAST_INSTALL",
    "a160": "--trace=_LT_AC_SYS_COMPILER",
    "a161": "--trace=_LT_AC_SYS_LIBPATH_AIX",
    "a162": "--trace=_LT_AC_TAGCONFIG",
    "a163": "--trace=_LT_AC_TAGVAR",
    "a164": "--trace=_LT_AC_TRY_DLOPEN_SELF",
    "a165": "--trace=_LT_CC_BASENAME",
    "a166": "--trace=_LT_COMPILER_BOILERPLATE",
    "a167": "--trace=_LT_COMPILER_OPTION",
    "a168": "--trace=_LT_DLL_DEF_P",
    "a169": "--trace=_LT_LIBOBJ",
    "a17": "--trace=AC_ENABLE_SHARED",
    "a170": "--trace=_LT_LINKER_BOILERPLATE",
    "a171": "--trace=_LT_LINKER_OPTION",
    "a172": "--trace=_LT_PATH_TOOL_PREFIX",
    "a173": "--trace=_LT_PREPARE_SED_QUOTE_VARS",
    "a174": "--trace=_LT_PROG_CXX",
    "a175": "--trace=_LT_PROG_ECHO_BACKSLASH",
    "a176": "--trace=_LT_PROG_F77",
    "a177": "--trace=_LT_PROG_FC",
    "a178": "--trace=_LT_PROG_LTMAIN",
    "a179": "--trace=_LT_REQUIRED_DARWIN_CHECKS",
    "a18": "--trace=AC_ENABLE_STATIC",
    "a180": "--trace=_LT_WITH_SYSROOT",
    "a181": "--trace=_m4_warn",
    "a182": "--trace=include",
    "a183": "--trace=m4_include",
    "a184": "--trace=m4_pattern_allow",
    "a185": "--trace=m4_pattern_forbid",
    "a186": "--reload-state=/usr/share/autoconf-2.60/autoconf/autoconf.m4f",
    "a187": "--undefine=__m4_version__",
    "a188": "-",
    "a189": "/usr/share/aclocal-1.16/internal/ac-config-macro-dirs.m4",
    "a19": "--trace=AC_LIBLTDL_CONVENIENCE",
    "a190": "/usr/share/libtool/aclocal/libtool.m4",
    "a191": "/usr/share/libtool/aclocal/ltargz.m4",
    "a192": "/usr/share/libtool/aclocal/ltdl.m4",
    "a193": "/usr/share/libtool/aclocal/ltoptions.m4",
    "a194": "/usr/share/libtool/aclocal/ltsugar.m4",
    "a195": "/usr/share/libtool/aclocal/ltversion.m4",
    "a196": "/usr/share/libtool/aclocal/lt~obsolete.m4",
    "a197": "/usr/share/aclocal-1.16/amversion.m4",
    "a198": "/usr/share/aclocal-1.16/auxdir.m4",
    "a199": "/usr/share/aclocal-1.16/cond.m4",
    "a2": "--gnu",
    "a20": "--trace=AC_LIBLTDL_INSTALLABLE",
    "a200": "/usr/share/aclocal-1.16/depend.m4",
    "a201": "/usr/share/aclocal-1.16/depout.m4",
    "a202": "/usr/share/aclocal-1.16/init.m4",
    "a203": "/usr/share/aclocal-1.16/install-sh.m4",
    "a204": "/usr/share/aclocal-1.16/lead-dot.m4",
    "a205": "/usr/share/aclocal-1.16/make.m4",
    "a206": "/usr/share/aclocal-1.16/missing.m4",
    "a207": "/usr/share/aclocal-1.16/options.m4",
    "a208": "/usr/share/aclocal-1.16/prog-cc-c-o.m4",
    "a209": "/usr/share/aclocal-1.16/runlog.m4",
    "a21": "--trace=AC_LIBTOOL_COMPILER_OPTION",
    "a210": "/usr/share/aclocal-1.16/sanity.m4",
    "a211": "/usr/share/aclocal-1.16/silent.m4",
    "a212": "/usr/share/aclocal-1.16/strip.m4",
    "a213": "/usr/share/aclocal-1.16/substnot.m4",
    "a214": "/usr/share/aclocal-1.16/tar.m4",
    "a215": "configure.ac",
    "a22": "--trace=AC_LIBTOOL_CONFIG",
    "a23": "--trace=AC_LIBTOOL_CXX",
    "a24": "--trace=AC_LIBTOOL_DLOPEN",
    "a25": "--trace=AC_LIBTOOL_DLOPEN_SELF",
    "a26": "--trace=AC_LIBTOOL_F77",
    "a27": "--trace=AC_LIBTOOL_FC",
    "a28": "--trace=AC_LIBTOOL_GCJ",
    "a29": "--trace=AC_LIBTOOL_LANG_CXX_CONFIG",
    "a3": "--include=/usr/share/autoconf-2.60",
    "a30": "--trace=AC_LIBTOOL_LANG_C_CONFIG",
    "a31": "--trace=AC_LIBTOOL_LANG_F77_CONFIG",
    "a32": "--trace=AC_LIBTOOL_LANG_GCJ_CONFIG",
    "a33": "--trace=AC_LIBTOOL_LANG_RC_CONFIG",
    "a34": "--trace=AC_LIBTOOL_LINKER_OPTION",
    "a35": "--trace=AC_LIBTOOL_OBJDIR",
    "a36": "--trace=AC_LIBTOOL_PICMODE",
    "a37": "--trace=AC_LIBTOOL_POSTDEP_PREDEP",
    "a38": "--trace=AC_LIBTOOL_PROG_CC_C_O",
    "a39": "--trace=AC_LIBTOOL_PROG_COMPILER_NO_RTTI",
    "a4": "--debug=aflq",
    "a40": "--trace=AC_LIBTOOL_PROG_COMPILER_PIC",
    "a41": "--trace=AC_LIBTOOL_PROG_LD_HARDCODE_LIBPATH",
    "a42": "--trace=AC_LIBTOOL_PROG_LD_SHLIBS",
    "a43": "--trace=AC_LIBTOOL_RC",
    "a44": "--trace=AC_LIBTOOL_SETUP",
    "a45": "--trace=AC_LIBTOOL_SYS_DYNAMIC_LINKER",
    "a46": "--trace=AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE",
    "a47": "--trace=AC_LIBTOOL_SYS_HARD_LINK_LOCKS",
    "a48": "--trace=AC_LIBTOOL_SYS_LIB_STRIP",
    "a49": "--trace=AC_LIBTOOL_SYS_MAX_CMD_LEN",
    "a5": "--fatal-warning",
    "a50": "--trace=AC_LIBTOOL_SYS_OLD_ARCHIVE",
    "a51": "--trace=AC_LIBTOOL_WIN32_DLL",
    "a52": "--trace=AC_LIB_LTDL",
    "a53": "--trace=AC_LTDL_DLLIB",
    "a54": "--trace=AC_LTDL_DLSYM_USCORE",
    "a55": "--trace=AC_LTDL_ENABLE_INSTALL",
    "a56": "--trace=AC_LTDL_OBJDIR",
    "a57": "--trace=AC_LTDL_PREOPEN",
    "a58": "--trace=AC_LTDL_SHLIBEXT",
    "a59": "--trace=AC_LTDL_SHLIBPATH",
    "a6": "--debugfile=autom4te.cache/traces.0t",
    "a60": "--trace=AC_LTDL_SYMBOL_USCORE",
    "a61": "--trace=AC_LTDL_SYSSEARCHPATH",
    "a62": "--trace=AC_LTDL_SYS_DLOPEN_DEPLIBS",
    "a63": "--trace=AC_PATH_MAGIC",
    "a64": "--trace=AC_PATH_TOOL_PREFIX",
    "a65": "--trace=AC_PROG_EGREP",
    "a66": "--trace=AC_PROG_LD",
    "a67": "--trace=AC_PROG_LD_GNU",
    "a68": "--trace=AC_PROG_LD_RELOAD_FLAG",
    "a69": "--trace=AC_PROG_LIBTOOL",
    "a7": "--trace=AC_CHECK_LIBM",
    "a70": "--trace=AC_PROG_NM",
    "a71": "--trace=AC_WITH_LTDL",
    "a72": "--trace=AM_AUTOMAKE_VERSION",
    "a73": "--trace=AM_AUX_DIR_EXPAND",
    "a74": "--trace=AM_CONDITIONAL",
    "a75": "--trace=AM_DEP_TRACK",
    "a76": "--trace=AM_DISABLE_SHARED",
    "a77": "--trace=AM_DISABLE_STATIC",
    "a78": "--trace=AM_ENABLE_SHARED",
    "a79": "--trace=AM_ENABLE_STATIC",
    "a8": "--trace=AC_CONFIG_MACRO_DIR",
    "a80": "--trace=AM_INIT_AUTOMAKE",
    "a81": "--trace=AM_MAKE_INCLUDE",
    "a82": "--trace=AM_MISSING_HAS_RUN",
    "a83": "--trace=AM_MISSING_PROG",
    "a84": "--trace=AM_OUTPUT_DEPENDENCY_COMMANDS",
    "a85": "--trace=AM_PROG_CC_C_O",
    "a86": "--trace=AM_PROG_INSTALL_SH",
    "a87": "--trace=AM_PROG_INSTALL_STRIP",
    "a88": "--trace=AM_PROG_LD",
    "a89": "--trace=AM_PROG_LIBTOOL",
    "a9": "--trace=AC_CONFIG_MACRO_DIR_TRACE",
    "a90": "--trace=AM_PROG_NM",
    "a91": "--trace=AM_RUN_LOG",
    "a92": "--trace=AM_SANITY_CHECK",
    "a93": "--trace=AM_SET_CURRENT_AUTOMAKE_VERSION",
    "a94": "--trace=AM_SET_DEPDIR",
    "a95": "--trace=AM_SET_LEADING_DOT",
    "a96": "--trace=AM_SILENT_RULES",
    "a97": "--trace=AM_SUBST_NOTMAKE",
    "a98": "--trace=AU_DEFUN",
    "a99": "--trace=LTDL_CONVENIENCE",
    "argc": "216"
  }
}
