tests/snapshots/integration_test__log_data@662b7718437db96f7e28625c8767b534.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SECCOMP msg=audit(1433785727.186:10262): auid=20003 uid=22 gid=22 ses=21 pid=11217 comm=\"sshd\" exe=\"/usr/sbin/sshd\" sig=31 arch=40000003 syscall=132 compat=0 ip=0xb7670aac code=0x0"
---
{
  "record_type": "SECCOMP",
  "timestamp": 1433785727186,
  "id": 10262,
  "fields": {
    "arch": "40000003",
    "auid": 20003,
    "code": "0x0",
    "comm": "sshd",
    "compat": "0",
    "exe": "/usr/sbin/sshd",
    "gid": 22,
    "ip": "0xb7670aac",
    "pid": "11217",
    "ses": "21",
    "sig": "31",
    "syscall": "132",
    "uid": 22
  }
}
