tests/snapshots/integration_test__log_data@66a9e0165ea0a2ee86acd7fc5833878c.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-cred-acq.log:1"
expression: result
info: "type=CRED_ACQ msg=audit(1725004861.996:747421): pid=26752 uid=0 auid=4294967295 ses=4294967295 msg='op=PAM:setcred grantors=pam_env,pam_unix acct=\"root\" exe=\"/usr/sbin/crond\" hostname=? addr=? terminal=cron res=success'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "record_type": "CRED_ACQ",
  "timestamp": 1725004861996,
  "id": 747421,
  "fields": {
    "auid": null,
    "msg": {
      "acct": "root",
      "addr": null,
      "exe": "/usr/sbin/crond",
<<<<<<< HEAD
<<<<<<< Updated upstream
      "grantors": "pam_env,pam_unix",
=======
      "grantors": [
        "pam_env",
        "pam_unix"
      ],
>>>>>>> main
      "hostname": "?",
=======
      "grantors": [
        "pam_env",
        "pam_unix"
      ],
      "hostname": null,
>>>>>>> Stashed changes
      "op": "PAM:setcred",
      "res": "success",
      "terminal": "cron"
    },
    "pid": "26752",
    "ses": "4294967295",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "UID": "root"
  }
}
