tests/snapshots/integration_test__log_data@6739231b052fccfd2da30dae0c9d62c9.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-avc-granted.log:1"
expression: result
info: "type=AVC msg=audit(1631870323.500:7098): avc:  granted  { setsecparam } for  pid=11209 comm=\"tuned\" scontext=system_u:system_r:tuned_t:s0 tcontext=system_u:object_r:security_t:s0 tclass=security"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:   granted  { setsecparam } for  pid=11209 comm=\"tuned\" scontext=system_u:system_r:tuned_t:s0 tcontext=system_u:object_r:security_t:s0 tclass=security"
    }
  }
}
