tests/snapshots/integration_test__log_data@68083796300f89ade2b32a27fd1b6c0b.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:17"
expression: result
info: "type=LOGIN msg=audit(1481077043.057:414): pid=1298 uid=0 subj=system_u:system_r:sshd_t:s0-s0:c0.c1023 old-auid=4294967295 auid=1000 old-ses=4294967295 ses=1 res=1"
---
{
  "record_type": "LOGIN",
  "timestamp": 1481077043057,
  "id": 414,
  "fields": {
    "auid": 1000,
    "old-auid": null,
    "old-ses": "4294967295",
    "pid": "1298",
    "res": "success",
    "ses": "1",
    "subj": {
      "level": {
        "category": "c0.c1023",
        "sensitivity": "s0-s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "sshd_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
